@@ -88,11 +88,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  * mod_rewrite: Fix RewriteCond integer checks to be parsed correctly.
-    (PR 53023)
-    Patch: http://svn.apache.org/viewvc?view=revision&revision=1309602
-    (applies cleanly to 2.4.x)
-    +1: nd, sf, jim
 
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
